add bad script + need to rewrite it

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,12 @@
       <h2 class="table-item__title">Lorem ipsum dolor.</h2>
       <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
     </div>
+    <div id="testDocument">
+      This is a test
+      <span> This is another test</span>
+      äöüÄÖÜäöüÄÖÜ
+      <span>Test123&auml;&ouml;&uuml;&Auml;&Ouml;&Uuml;</span>
+    </div>
 <!--    <div class="table-item">-->
 <!--      <h2 class="table-item__title">Sit amet, consectetur</h2>-->
 <!--      <p class="table-item__content">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>-->
