rewrite all stuff + final commit (i think so) + add register sensitive variable

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,9 @@
 <body>
 <div class="container">
   <div class="search">
-    <input type="text" id="search__input" class="search__input">
+    <input type="text" placeholder="Введите текст..." class="search__input">
     <button class="search__button">Search→</button>
-    <span class="search__counter">Ничего не найдено</span>
+    <span class="search__counter">Поле ввода пустое, напишите что нибудь.</span>
   </div>
   <div class="table-head">
     <div class="table-head__content">First col</div>
@@ -28,108 +28,102 @@
       <h2 class="table-item__title">Lorem ipsum dolor.</h2>
       <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
     </div>
-    <div id="testDocument">
-      This is a test
-      <span> This is another test</span>
-      äöüÄÖÜäöüÄÖÜ
-      <span>Test123&auml;&ouml;&uuml;&Auml;&Ouml;&Uuml;</span>
+    <div class="table-item">
+      <h2 class="table-item__title">Sit amet, consectetur</h2>
+      <p class="table-item__content">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
     </div>
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Sit amet, consectetur</h2>-->
-<!--      <p class="table-item__content">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">adipisicing elit.,</h2>-->
-<!--      <p class="table-item__content">Sit amet, Lorem ipsum dolor Lorem ipsum dolor.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">elit. Dignissimos, earum.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur Lorem ipsum dolor sit. adipisicing </p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">adipisicing elit.,</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur  earum ipsum dolor sit. adipisicing.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum Digni.</h2>-->
-<!--      <p class="table-item__content">Sit amet, elit. Dignissimos, earum Lorem ipsum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Sit amet, consect.</h2>-->
-<!--      <p class="table-item__content"> adipisicing elit. Dignissimos, earum. Dignissimos, earum</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">elit. Dignissimos</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur Lorem ipsum elit. Dignissimos, earum adipisicing </p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">adipisicing elit.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur  earum ipsum dolor sit. adipisicing.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Explicabo magnam modi natus reiciendis sunt ullam!</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum amet,.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur consectetur adipisicing elit. Architecto corporis delectus, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Loremamet, Lorem dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing laudantium, possimus quaerat quas ratione rerum, sunt ullam.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum amet ipsum .</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum ipsum  amet.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum amet, Lorem .</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur amet, Lorem ipsum dolor sit amet</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">amet, Lorem ipsum</h2>-->
-<!--      <p class="table-item__content">amet, Lorem ipsum dolor sit amet elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">amet, Lorem ipsum dolor sit amet</h2>-->
-<!--      <p class="table-item__content">Sit amet, Lorem ipsum dolor sit amet,  eaque esse explicabo id .</p>-->
-<!--    </div>-->
-<!--    <div class="table-item">-->
-<!--      <h2 class="table-item__title">Lorem ipsum dolor.</h2>-->
-<!--      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>-->
-<!--    </div>-->
+    <div class="table-item">
+      <h2 class="table-item__title">adipisicing elit.,</h2>
+      <p class="table-item__content">Sit amet, Lorem ipsum dolor Lorem ipsum dolor.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">elit. Dignissimos, earum.</h2>
+      <p class="table-item__content">Sit amet, consectetur Lorem ipsum dolor sit. adipisicing </p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">adipisicing elit.,</h2>
+      <p class="table-item__content">Sit amet, consectetur  earum ipsum dolor sit. adipisicing.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum Digni.</h2>
+      <p class="table-item__content">Sit amet, elit. Dignissimos, earum Lorem ipsum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Sit amet, consect.</h2>
+      <p class="table-item__content"> adipisicing elit. Dignissimos, earum. Dignissimos, earum</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">elit. Dignissimos</h2>
+      <p class="table-item__content">Sit amet, consectetur Lorem ipsum elit. Dignissimos, earum adipisicing </p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">adipisicing elit.</h2>
+      <p class="table-item__content">Sit amet, consectetur  earum ipsum dolor sit. adipisicing.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Explicabo magnam modi natus reiciendis sunt ullam!</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum amet,.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur consectetur adipisicing elit. Architecto corporis delectus, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Loremamet, Lorem dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing laudantium, possimus quaerat quas ratione rerum, sunt ullam.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum amet ipsum .</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum ipsum  amet.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum amet, Lorem .</h2>
+      <p class="table-item__content">Sit amet, consectetur amet, Lorem ipsum dolor sit amet</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">amet, Lorem ipsum</h2>
+      <p class="table-item__content">amet, Lorem ipsum dolor sit amet elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">amet, Lorem ipsum dolor sit amet</h2>
+      <p class="table-item__content">Sit amet, Lorem ipsum dolor sit amet,  eaque esse explicabo id .</p>
+    </div>
+    <div class="table-item">
+      <h2 class="table-item__title">Lorem ipsum dolor.</h2>
+      <p class="table-item__content">Sit amet, consectetur adipisicing elit. Dignissimos, earum.</p>
+    </div>
   </div>
 </div>
 
